kubernetes-manifests/order-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice
spec:
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: orderservice
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
            memory: 500Mi
          limits:
            cpu: 300m
            memory: 1000Mi
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /api/hello
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /api/hello
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: orderservice
spec:
  type: NodePort
  selector:
    app: orderservice
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
