kubernetes-manifests/sarang-ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sarangui
spec:
  selector:
    matchLabels:
      app: sarangui
  template:
    metadata:
      labels:
        app: sarangui
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: sarangui
        ports:
        - containerPort: 7070
        resources:
          requests:
            cpu: 200m
            memory: 300Mi
          limits:
            cpu: 300m
            memory: 500Mi
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 7070
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 7070
          initialDelaySeconds: 20
          periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: sarangui
spec:
  type: NodePort
  selector:
    app: sarangui
  ports:
  - name: http
    port: 7070
    targetPort: 7070
    protocol: TCP
